--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <table>
             <tr>
                 <td><input type="button" class="button" value="C" onclick="clean()"></td>
-                <td><input type="button" class="button" value="<=" onclick=""></td>
+                <td><input type="button" class="button" value="CE" onclick="back()"></td>
                 <td><input id ="buttondiv" type="button" class="button" value="/" onclick="insert('/')"></td>
-                <td><input id ="buttonmul" type="button" class="button" value="x" onclick="insert('x')"></td>
+                <td><input id ="buttonmul" type="button" class="button" value="x" onclick="insert('*')"></td>
             </tr>
             <tr>
                 <td><input id ="button7" type="button" class="button" value="7" onclick="insert(7)"></td>
