--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div>
+    <div class="container" id="container">
         <form name="calculator">
             <textarea id="textview" class="textview" disabled></textarea>
         </form>
