--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
 </head>
 <body>
     <div class="container" id="container">
+        <div class="title">Calculator</div>
         <form name="calculator">
             <textarea id="textview" class="textview" disabled></textarea>
         </form>
         <table>
             <tr>
-                <td><input type="button" class="button" value="C" onclick="clean()"></td>
-                <td><input type="button" class="button" value="CE" onclick="back()"></td>
-                <td><input id ="buttondiv" type="button" class="button" value="/" onclick="insert('/')"></td>
-                <td><input id ="buttonmul" type="button" class="button" value="x" onclick="insert('*')"></td>
+                <td><input id="buttonClean" type="button" class="button" value="C"></td>
+                <td><input id="buttonBack" type="button" class="button" value="CE"></td>
+                <td><input id ="buttondiv" type="button" class="button" value="/"></td>
+                <td><input id ="buttonmul" type="button" class="button" value="x"></td>
             </tr>
             <tr>
-                <td><input id ="button7" type="button" class="button" value="7" onclick="insert(7)"></td>
-                <td><input id ="button8" type="button" class="button" value="8" onclick="insert(8)"></td>
-                <td><input id ="button9" type="button" class="button" value="9" onclick="insert(9)"></td>
-                <td><input id ="buttonadd" type="button" class="button" value="+" onclick="insert('+')"></td>
+                <td><input id ="button7" type="button" class="button" value="7"></td>
+                <td><input id ="button8" type="button" class="button" value="8" ></td>
+                <td><input id ="button9" type="button" class="button" value="9" ></td>
+                <td><input id ="buttonadd" type="button" class="button" value="+"></td>
             </tr>
             <tr>
-                <td><input id ="button4" type="button" class="button" value="4" onclick="insert(4)"></td>
-                <td><input id ="button5" type="button" class="button" value="5" onclick="insert(5)"></td>
-                <td><input id ="button6" type="button" class="button" value="6" onclick="insert(6)"></td>
-                <td><input id ="buttonsub" type="button" class="button" value="-" onclick="insert('-')"></td>
+                <td><input id ="button4" type="button" class="button" value="4"></td>
+                <td><input id ="button5" type="button" class="button" value="5"></td>
+                <td><input id ="button6" type="button" class="button" value="6"></td>
+                <td><input id ="buttonsub" type="button" class="button" value="-"></td>
             </tr>
             <tr>
-                <td><input id ="button1" type="button" class="button" value="1" onclick="insert(1)"></td>
-                <td><input id ="button2" type="button" class="button" value="2" onclick="insert(2)"></td>
-                <td><input id ="button3" type="button" class="button" value="3" onclick="insert(3)"></td>
-                <td rowspan="2"><input type="button" class="button-equal" value="=" onclick="calc()"></td>
+                <td><input id ="button1" type="button" class="button" value="1"></td>
+                <td><input id ="button2" type="button" class="button" value="2"></td>
+                <td><input id ="button3" type="button" class="button" value="3"></td>
+                <td rowspan="2"><input id="buttonEqual" type="button" class="button-equal" value="="></td>
             </tr>
             <tr>
-                <td colspan="2"><input id ="buttonzero" type="button" class="button-zero" value="0" onclick="insert(0)"></td>
-                <td><input type="button" class="button" value="." onclick="insert('.')"></td>
+                <td colspan="2"><input id ="buttonzero" type="button" class="button-zero" value="0" "></td>
+                <td><input id="buttonDot" type="button" class="button" value="." "></td>
                 
             </tr>
         </table>
+        <div class="footer"> &copy;Bornak Paul</div>
     </div>
     <script src="main.js"></script>
 </body>
